--- a/about-us.html
+++ b/about-us.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <!-- Title -->
-    <title>About us</title>
+    <title>About us - Animation Studio after effects - Website Background Animation</title>
     <!-- Required Meta Tags Always Come First -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description"  content="SPurno Animation Studio is a leading animation studio specializing in creating high-quality 2D and 3D animations for a variety of industries. With a team of skilled animators, designers, and storytellers, we bring characters and concepts to life through cutting-edge technology and creative storytelling. Our services include animation for films, television, commercials, video games, and corporate projects. Whether it's character design, motion graphics, or full-length animated features, we deliver captivating visual experiences that engage audiences and elevate brands. At SPurno Animation Studio, creativity meets innovation to produce animations that inspire and entertain." />
-    <meta name="author" content="">
-    <meta name="keywords"  content="" />
+    <meta name="description"  content="About us - Animation Studio after effects - Background Animation - Website Background Animation | SPurno Animation Studio is a leading animation studio specializing in creating high-quality 2D and 3D animations for a variety of industries. With a team of skilled animators, designers, and storytellers, we bring characters and concepts to life through cutting-edge technology and creative storytelling. Our services include animation for films, television, commercials, video games, and corporate projects. Whether it's character design, motion graphics, or full-length animated features, we deliver captivating visual experiences that engage audiences and elevate brands. At SPurno Animation Studio, creativity meets innovation to produce animations that inspire and entertain." />
+    <meta name="author" content="SPurno Animation Studio">
+    <meta name="keywords"  content="Animation Studio after effects, Website Background Animation" />
     <meta property="og:title" content="" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="www.spurno.github.io" />
@@ -18,8 +18,6 @@
     <meta property="og:image:height" content="246" />
     <meta property="og:site_name" content="" />
     <script type="application/ld+json" src="application/Id+json.json"></script>
-
-
     <meta property="og:description" content="Modern 3d business infographics vector design template. Can be used for workflow processes, flow chart, banner, number options, presentation, layout
     Browse 31029 incredible 3d Infographic vectors, icons, clipart graphics, and backgrounds for royalty-free download from the creative contributors
     Browse 31029 incredible 3d Infographic vectors, icons, clipart graphics, and backgrounds for royalty-free download from the creative contributors
@@ -30,7 +28,7 @@
     <meta name="twitter:domain" content="http://spurno.github.io" />
     <meta name="twitter:title" content="" />
     <meta name="twitter:description" content="Find & Download Free or Premium Graphic Resources for 3d Infographic" />
-    <meta name="twitter:image" content="http://spurno.github.io/3d-infographic"/>
+    <meta name="twitter:image" content="http://spurno.github.io/images/bio.jpg"/>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="favicon/favicon.ico">
@@ -41,29 +39,26 @@
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
 
     <!-- CSS Global Compulsory -->
-    <link rel="stylesheet" href="blog/assets/vendor/bootstrap/bootstrap.min.css">
-    <script src="js/indexnowapi.js"></script>
-
+    <link rel="stylesheet" href="assets/vendor/bootstrap/bootstrap.min.css">
+    
     <!-- CSS Implementing Plugins -->
-    <link rel="stylesheet" href="blog/assets/vendor/icon-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="blog/assets/vendor/icon-line/css/simple-line-icons.css">
-    <link rel="stylesheet" href="blog/assets/vendor/icon-line-pro/style.css">
-    <link rel="stylesheet" href="blog/assets/vendor/icon-hs/style.css">
-    <link rel="stylesheet" href="blog/assets/vendor/dzsparallaxer/dzsparallaxer.css">
-    <link rel="stylesheet" href="blog/assets/vendor/dzsparallaxer/dzsscroller/scroller.css">
-    <link rel="stylesheet" href="blog/assets/vendor/dzsparallaxer/advancedscroller/plugin.css">
-    <link rel="stylesheet" href="blog/assets/vendor/animate.css">
-    <link rel="stylesheet" href="blog/assets/vendor/hs-megamenu/src/hs.megamenu.css">
-    <link rel="stylesheet" href="blog/assets/vendor/hamburgers/hamburgers.min.css">
-    <link rel="stylesheet" href="blog/assets/vendor/slick-carousel/slick/slick.css">
-    <link rel="stylesheet" href="blog/assets/vendor/fancybox/jquery.fancybox.css">
-    <link rel="stylesheet" href="blog/assets/vendor/custombox/custombox.min.css">
-
-    <link rel="stylesheet" href="assets2/css/business.css">
+    <link rel="stylesheet" href="assets/vendor/icon-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/vendor/icon-line/css/simple-line-icons.css">
+    <link rel="stylesheet" href="assets/vendor/icon-line-pro/style.css">
+    <link rel="stylesheet" href="assets/vendor/icon-hs/style.css">
+    <link rel="stylesheet" href="assets/vendor/dzsparallaxer/dzsparallaxer.css">
+    <link rel="stylesheet" href="assets/vendor/dzsparallaxer/dzsscroller/scroller.css">
+    <link rel="stylesheet" href="assets/vendor/dzsparallaxer/advancedscroller/plugin.css">
+    <link rel="stylesheet" href="assets/vendor/animate.css">
+    <link rel="stylesheet" href="assets/vendor/hs-megamenu/src/hs.megamenu.css">
+    <link rel="stylesheet" href="assets/vendor/hamburgers/hamburgers.min.css">
+    <link rel="stylesheet" href="assets/vendor/slick-carousel/slick/slick.css">
+    <link rel="stylesheet" href="assets/vendor/fancybox/jquery.fancybox.css">
+    <link rel="stylesheet" href="assets/vendor/custombox/custombox.min.css">
+    <link rel="stylesheet" href="assets/css/business.css">
 
     <!-- CSS Customization -->
-    <link rel="stylesheet" href="blog/assets/css/custom.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5756742830355549" crossorigin="anonymous"></script>
+    <script src="js/indexnowapi.js"></script>
   </head>
 
   <body>
@@ -1199,42 +1194,42 @@
       </section>
       <!-- End Pricing Table -->
        <!-- contact  -->
-              <div id="contact" class="text-center g-color-gray-light-v2 g-theme-bg-blue-dark-v1 g-py-80">
-          <div class="container g-width-780 g-mb-60">
-            <div class="text-uppercase u-heading-v2-4--bottom g-brd-primary g-mb-45">
-              <h4 class="h6 g-font-weight-800 g-font-size-12 g-letter-spacing-1 g-color-primary g-mb-20">Contact</h4>
-              <h2 class="h1 u-heading-v2__title g-line-height-1_3 g-font-weight-600 g-font-size-40 g-color-gray-light-v2 g-mb-minus-10">Our contacts</h2>
-            </div>
-
-            <p class="g-color-gray-light-v2 mb-0">Call us for more details or add on WhatsApp </p>
+      <div id="contact" class="text-center g-color-gray-light-v2 g-theme-bg-blue-dark-v1 g-py-80">
+        <div class="container g-width-780 g-mb-60">
+          <div class="text-uppercase u-heading-v2-4--bottom g-brd-primary g-mb-45">
+            <h4 class="h6 g-font-weight-800 g-font-size-12 g-letter-spacing-1 g-color-primary g-mb-20">Contact</h4>
+            <h2 class="h1 u-heading-v2__title g-line-height-1_3 g-font-weight-600 g-font-size-40 g-color-gray-light-v2 g-mb-minus-10">Our contacts</h2>
           </div>
 
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-3 g-px-15 g-py-30 g-py-0--md">
-                <i class="icon-globe d-inline-block g-font-size-50 g-color-primary g-mb-20"></i>
-                <h3 class="text-uppercase g-font-size-default g-color-white-opacity-0_5 g-mb-5">Address</h3>
-                <strong class="g-font-size-default g-color-white">Dhanmondi 32, Dhaka, 1207</strong>
-              </div>
+          <p class="g-color-gray-light-v2 mb-0">Call us for more details or add on WhatsApp </p>
+        </div>
 
-              <div class="col-sm-3 g-brd-top g-brd-top-none--md g-brd-left--md g-brd-primary g-px-15 g-py-30 g-py-0--md">
-                <i class="icon-call-in d-inline-block g-font-size-50 g-color-primary g-mb-20"></i>
-                <h3 class="text-uppercase g-font-size-default g-color-white-opacity-0_5 g-mb-5">Phone number</h3>
-                <strong class="g-font-size-default g-color-white">+880 1521211774</strong>
-              </div>
-              <div class="col-sm-3 g-brd-top g-brd-top-none--md g-brd-left--md g-brd-primary g-px-15 g-py-30 g-py-0--md">
-                <i class="icon-envelope d-inline-block g-font-size-50 g-color-primary g-mb-20"></i>
-                <h3 class="text-uppercase g-font-size-default g-color-white-opacity-0_5 g-mb-5">Email</h3>
-                <a class="g-font-size-default g-color-white" href="mailto:spurno@icloud.com"><strong>spurno@icloud.com</strong></a>
-              </div>
-              <div class="col-sm-3 g-brd-top g-brd-top-none--md g-brd-left--md g-brd-primary g-px-15 g-py-30 g-py-0--md">
-                <i class="icon-earphones-alt d-inline-block g-font-size-50 g-color-primary g-mb-20"></i>
-                <h3 class="text-uppercase g-font-size-default g-color-white-opacity-0_5 g-mb-5">WhatsApp</h3>
-                <strong class="g-font-size-default g-color-white">+880 1521211774</strong>
-              </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-3 g-px-15 g-py-30 g-py-0--md">
+              <i class="icon-globe d-inline-block g-font-size-50 g-color-primary g-mb-20"></i>
+              <h3 class="text-uppercase g-font-size-default g-color-white-opacity-0_5 g-mb-5">Address</h3>
+              <strong class="g-font-size-default g-color-white">Dhanmondi 32, Dhaka, 1207</strong>
+            </div>
+
+            <div class="col-sm-3 g-brd-top g-brd-top-none--md g-brd-left--md g-brd-primary g-px-15 g-py-30 g-py-0--md">
+              <i class="icon-call-in d-inline-block g-font-size-50 g-color-primary g-mb-20"></i>
+              <h3 class="text-uppercase g-font-size-default g-color-white-opacity-0_5 g-mb-5">Phone number</h3>
+              <strong class="g-font-size-default g-color-white">+880 1521211774</strong>
+            </div>
+            <div class="col-sm-3 g-brd-top g-brd-top-none--md g-brd-left--md g-brd-primary g-px-15 g-py-30 g-py-0--md">
+              <i class="icon-envelope d-inline-block g-font-size-50 g-color-primary g-mb-20"></i>
+              <h3 class="text-uppercase g-font-size-default g-color-white-opacity-0_5 g-mb-5">Email</h3>
+              <a class="g-font-size-default g-color-white" href="mailto:spurno@icloud.com"><strong>spurno@icloud.com</strong></a>
+            </div>
+            <div class="col-sm-3 g-brd-top g-brd-top-none--md g-brd-left--md g-brd-primary g-px-15 g-py-30 g-py-0--md">
+              <i class="icon-earphones-alt d-inline-block g-font-size-50 g-color-primary g-mb-20"></i>
+              <h3 class="text-uppercase g-font-size-default g-color-white-opacity-0_5 g-mb-5">WhatsApp</h3>
+              <strong class="g-font-size-default g-color-white">+880 1521211774</strong>
             </div>
           </div>
         </div>
+      </div>
       <!-- Footer -->
       <footer class="g-bg-secondary">
         <div class="g-brd-bottom g-brd-secondary-light-v2 g-py-50 g-mb-50">
@@ -1450,33 +1445,33 @@
     <div class="u-outer-spaces-helper"></div>
 
     <!-- JS Global Compulsory -->
-    <script src="blog/assets/vendor/jquery/jquery.min.js"></script>
-    <script src="blog/assets/vendor/jquery-migrate/jquery-migrate.min.js"></script>
-    <script src="blog/assets/vendor/popper.min.js"></script>
-    <script src="blog/assets/vendor/bootstrap/bootstrap.min.js"></script>
-    <script src="blog/assets/vendor/custombox/custombox.min.js"></script>
+    <script src="assets/vendor/jquery/jquery.min.js"></script>
+    <script src="assets/vendor/jquery-migrate/jquery-migrate.min.js"></script>
+    <script src="assets/vendor/popper.min.js"></script>
+    <script src="assets/vendor/bootstrap/bootstrap.min.js"></script>
+    <script src="assets/vendor/custombox/custombox.min.js"></script>
 
 
     <!-- JS Implementing Plugins -->
-    <script src="blog/assets/vendor/appear.js"></script>
-    <script src="blog/assets/vendor/dzsparallaxer/dzsparallaxer.js"></script>
-    <script src="blog/assets/vendor/dzsparallaxer/dzsscroller/scroller.js"></script>
-    <script src="blog/assets/vendor/dzsparallaxer/advancedscroller/plugin.js"></script>
-    <script src="blog/assets/vendor/hs-megamenu/src/hs.megamenu.js"></script>
-    <script src="blog/assets/vendor/slick-carousel/slick/slick.js"></script>
-    <script src="blog/assets/vendor/fancybox/jquery.fancybox.min.js"></script>
+    <script src="assets/vendor/appear.js"></script>
+    <script src="assets/vendor/dzsparallaxer/dzsparallaxer.js"></script>
+    <script src="assets/vendor/dzsparallaxer/dzsscroller/scroller.js"></script>
+    <script src="assets/vendor/dzsparallaxer/advancedscroller/plugin.js"></script>
+    <script src="assets/vendor/hs-megamenu/src/hs.megamenu.js"></script>
+    <script src="assets/vendor/slick-carousel/slick/slick.js"></script>
+    <script src="assets/vendor/fancybox/jquery.fancybox.min.js"></script>
 
     <!-- JS Unify -->
-    <script src="blog/assets/js/hs.core.js"></script>
-    <script src="blog/assets/js/components/hs.header.js"></script>
-    <script src="blog/assets/js/helpers/hs.hamburgers.js"></script>
-    <script src="blog/assets/js/components/hs.dropdown.js"></script>
-    <script src="blog/assets/js/components/hs.counter.js"></script>
-    <script src="blog/assets/js/components/hs.onscroll-animation.js"></script>
-    <script src="blog/assets/js/components/hs.sticky-block.js"></script>
-    <script src="blog/assets/js/components/hs.carousel.js"></script>
-    <script src="blog/assets/js/components/hs.popup.js"></script>
-    <script src="blog/assets/js/components/hs.go-to.js"></script>
+    <script src="assets/js/hs.core.js"></script>
+    <script src="assets/js/components/hs.header.js"></script>
+    <script src="assets/js/helpers/hs.hamburgers.js"></script>
+    <script src="assets/js/components/hs.dropdown.js"></script>
+    <script src="assets/js/components/hs.counter.js"></script>
+    <script src="assets/js/components/hs.onscroll-animation.js"></script>
+    <script src="assets/js/components/hs.sticky-block.js"></script>
+    <script src="assets/js/components/hs.carousel.js"></script>
+    <script src="assets/js/components/hs.popup.js"></script>
+    <script src="assets/js/components/hs.go-to.js"></script>
     <script src="https://apis.google.com/js/platform.js"></script>
     <script  src="assets/js/components/hs.modal-window.js"></script>
     <!-- JS Plugins Init. -->
