--- a/adobe-after-effect-plugins.html
+++ b/adobe-after-effect-plugins.html
@@ -24,7 +24,7 @@
     <meta name="twitter:domain" content="http://spurno.github.io" />
     <meta name="twitter:title" content="" />
     <meta name="twitter:description" content="Corporate Animation Artist" />
-    <meta name="twitter:image" content="http://spurno.github.io"/>
+     <meta name="twitter:image" content="http://spurno.github.io/images/bio.jpg"/>
     <script type="application/ld+json" src="application/Id+json.json"></script>
 
     <!-- Favicon -->
