--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="twitter:domain" content="http://spurno.github.io" />
     <meta name="twitter:title" content="SPurno Animation Studio | Animation Artist on AdobeStock & Shutterstock" />
     <meta name="twitter:description" content="SPurno Animation Studio | Animation Artist on AdobeStock & Shutterstock" />
-    <meta name="twitter:image" content="http://spurno.github.io"/>
+     <meta name="twitter:image" content="http://spurno.github.io/images/bio.jpg"/>
     <meta name="msvalidate.01" content="450E162F57167A95BB3C38776CABEB3F" />
     <meta name='impact-site-verification' value='1fd387c1-46eb-4274-99ad-e350d706a713'>
     <script type="application/ld+json" src="application/Id+json.json"></script>
@@ -36,26 +36,26 @@
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway%3A400%2C800%2C500">
 
     <!-- CSS Global Compulsory -->
-    <link rel="stylesheet" href="blog/assets/vendor/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/vendor/bootstrap/bootstrap.min.css">
 
     <!-- CSS Implementing Plugins -->
-    <link rel="stylesheet" href="blog/assets/vendor/icon-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="blog/assets/vendor/icon-etlinefont/style.css">
-    <link rel="stylesheet" href="blog/assets/vendor/icon-hs/style.css">
-    <link rel="stylesheet" href="blog/assets/vendor/icon-line-pro/style.css">
+    <link rel="stylesheet" href="assets/vendor/icon-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/vendor/icon-etlinefont/style.css">
+    <link rel="stylesheet" href="assets/vendor/icon-hs/style.css">
+    <link rel="stylesheet" href="assets/vendor/icon-line-pro/style.css">
 
-    <link rel="stylesheet" href="blog/assets/vendor/animate.css">
-    <link rel="stylesheet" href="blog/assets/vendor/hs-megamenu/src/hs.megamenu.css">
-    <link rel="stylesheet" href="blog/assets/vendor/hamburgers/hamburgers.min.css">
+    <link rel="stylesheet" href="assets/vendor/animate.css">
+    <link rel="stylesheet" href="assets/vendor/hs-megamenu/src/hs.megamenu.css">
+    <link rel="stylesheet" href="assets/vendor/hamburgers/hamburgers.min.css">
 
     <!-- CSS Unify -->
-    <link rel="stylesheet" href="blog/assets/css/unify.css">
+    <link rel="stylesheet" href="assets/css/unify.css">
 
     <!-- Revolution Slider -->
-    <link rel="stylesheet" href="blog/assets/vendor/revolution-slider/revolution/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css">
-    <link rel="stylesheet" href="blog/assets/vendor/revolution-slider/revolution/css/settings.css">
-    <link rel="stylesheet" href="blog/assets/vendor/revolution-slider/revolution/css/layers.css">
-    <link rel="stylesheet" href="blog/assets/vendor/revolution-slider/revolution/css/navigation.css">
+    <link rel="stylesheet" href="assets/vendor/revolution-slider/revolution/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css">
+    <link rel="stylesheet" href="assets/vendor/revolution-slider/revolution/css/settings.css">
+    <link rel="stylesheet" href="assets/vendor/revolution-slider/revolution/css/layers.css">
+    <link rel="stylesheet" href="assets/vendor/revolution-slider/revolution/css/navigation.css">
     <link rel="stylesheet" href="rev/assets/css/style.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5756742830355549" crossorigin="anonymous"></script>
     <script src="js/indexnowapi.js"></script>
@@ -466,7 +466,7 @@
                         <div class="col-lg-4 g-mb-30 g-mb-0--lg">
                           <article class="u-block-hover">
                             <figure class="g-bg-cover g-bg-black-gradient-opacity-v1--after">
-                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="blog/assets/img-temp/500x320/img1.jpg" alt="SPurno Animation Studio">
+                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="assets/img-temp/500x320/img1.jpg" alt="SPurno Animation Studio">
                             </figure>
                             <span class="g-pos-abs g-top-20 g-left-20">
                             <a class="btn btn-sm u-btn-red rounded-0" href="https://www.vecteezy.com/contributors?ref=3e6294ab-ad45-4d05-a6d1-69a50e4d26da&sub_id=default">
@@ -498,7 +498,7 @@
                         <div class="col-lg-4 g-mb-30 g-mb-0--lg">
                           <article class="u-block-hover">
                             <figure class="g-bg-cover g-bg-black-gradient-opacity-v1--after">
-                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="blog/assets/img-temp/500x320/img3.jpg" alt="SPurno Animation Studio">
+                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="assets/img-temp/500x320/img3.jpg" alt="SPurno Animation Studio">
                             </figure>
                             <span class="g-pos-abs g-top-20 g-left-20">
                             <a class="btn btn-sm u-btn-red rounded-0" href="https://www.shutterstock.com/en/g/SPurnoAnimation?rid=441825909">
@@ -530,7 +530,7 @@
                         <div class="col-lg-4 g-mb-30 g-mb-0--lg">
                           <article class="u-block-hover">
                             <figure class="g-bg-cover g-bg-black-gradient-opacity-v1--after">
-                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="blog/assets/img-temp/500x320/img2.jpg" alt="SPurno Animation Studio">
+                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="assets/img-temp/500x320/img2.jpg" alt="SPurno Animation Studio">
                             </figure>
                             <span class="g-pos-abs g-top-20 g-left-20">
                             <a class="btn btn-sm u-btn-red rounded-0" href="#">
