--- a/3d-infographic.html
+++ b/3d-infographic.html
@@ -35,7 +35,7 @@
     <meta name="twitter:domain" content="http://spurno.github.io" />
     <meta name="twitter:title" content="" />
     <meta name="twitter:description" content="Find & Download Free or Premium Graphic Resources for 3d Infographic" />
-    <meta name="twitter:image" content="http://spurno.github.io/3d-infographic"/>
+    <meta name="twitter:image" content="http://spurno.github.io/images/bio.jpg"/>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="favicon/favicon.ico">
@@ -46,27 +46,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
 
     <!-- CSS Global Compulsory -->
-    <link rel="stylesheet" href="blog/assets/vendor/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/vendor/bootstrap/bootstrap.min.css">
     <script src="js/indexnowapi.js"></script>
 
     <!-- CSS Implementing Plugins -->
-    <link rel="stylesheet" href="blog/assets/vendor/icon-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="blog/assets/vendor/icon-line/css/simple-line-icons.css">
-    <link rel="stylesheet" href="blog/assets/vendor/icon-line-pro/style.css">
-    <link rel="stylesheet" href="blog/assets/vendor/icon-hs/style.css">
-    <link rel="stylesheet" href="blog/assets/vendor/dzsparallaxer/dzsparallaxer.css">
-    <link rel="stylesheet" href="blog/assets/vendor/dzsparallaxer/dzsscroller/scroller.css">
-    <link rel="stylesheet" href="blog/assets/vendor/dzsparallaxer/advancedscroller/plugin.css">
-    <link rel="stylesheet" href="blog/assets/vendor/animate.css">
-    <link rel="stylesheet" href="blog/assets/vendor/hs-megamenu/src/hs.megamenu.css">
-    <link rel="stylesheet" href="blog/assets/vendor/hamburgers/hamburgers.min.css">
-    <link rel="stylesheet" href="blog/assets/vendor/slick-carousel/slick/slick.css">
-    <link rel="stylesheet" href="blog/assets/vendor/fancybox/jquery.fancybox.css">
+    <link rel="stylesheet" href="assets/vendor/icon-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/vendor/icon-line/css/simple-line-icons.css">
+    <link rel="stylesheet" href="assets/vendor/icon-line-pro/style.css">
+    <link rel="stylesheet" href="assets/vendor/icon-hs/style.css">
+    <link rel="stylesheet" href="assets/vendor/dzsparallaxer/dzsparallaxer.css">
+    <link rel="stylesheet" href="assets/vendor/dzsparallaxer/dzsscroller/scroller.css">
+    <link rel="stylesheet" href="assets/vendor/dzsparallaxer/advancedscroller/plugin.css">
+    <link rel="stylesheet" href="assets/vendor/animate.css">
+    <link rel="stylesheet" href="assets/vendor/hs-megamenu/src/hs.megamenu.css">
+    <link rel="stylesheet" href="assets/vendor/hamburgers/hamburgers.min.css">
+    <link rel="stylesheet" href="assets/vendor/slick-carousel/slick/slick.css">
+    <link rel="stylesheet" href="assets/vendor/fancybox/jquery.fancybox.css">
 
     <link rel="stylesheet" href="assets/css/styles.bm-classic.css">
 
     <!-- CSS Customization -->
-    <link rel="stylesheet" href="blog/assets/css/custom.css">
+    <link rel="stylesheet" href="assets/css/custom.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5756742830355549" crossorigin="anonymous"></script>
   </head>
 
@@ -467,7 +467,7 @@
                         <div class="col-lg-4 g-mb-30 g-mb-0--lg">
                           <article class="u-block-hover">
                             <figure class="g-bg-cover g-bg-black-gradient-opacity-v1--after">
-                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="blog/assets/img-temp/500x320/img1.jpg" alt="SPurno Animation Studio">
+                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="assets/img-temp/500x320/img1.jpg" alt="SPurno Animation Studio">
                             </figure>
                             <span class="g-pos-abs g-top-20 g-left-20">
                             <a class="btn btn-sm u-btn-red rounded-0" href="https://www.vecteezy.com/contributors?ref=3e6294ab-ad45-4d05-a6d1-69a50e4d26da&sub_id=default">
@@ -499,7 +499,7 @@
                         <div class="col-lg-4 g-mb-30 g-mb-0--lg">
                           <article class="u-block-hover">
                             <figure class="g-bg-cover g-bg-black-gradient-opacity-v1--after">
-                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="blog/assets/img-temp/500x320/img3.jpg" alt="SPurno Animation Studio">
+                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="assets/img-temp/500x320/img3.jpg" alt="SPurno Animation Studio">
                             </figure>
                             <span class="g-pos-abs g-top-20 g-left-20">
                             <a class="btn btn-sm u-btn-red rounded-0" href="https://www.shutterstock.com/en/g/SPurnoAnimation?rid=441825909">
@@ -531,7 +531,7 @@
                         <div class="col-lg-4 g-mb-30 g-mb-0--lg">
                           <article class="u-block-hover">
                             <figure class="g-bg-cover g-bg-black-gradient-opacity-v1--after">
-                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="blog/assets/img-temp/500x320/img2.jpg" alt="SPurno Animation Studio">
+                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="assets/img-temp/500x320/img2.jpg" alt="SPurno Animation Studio">
                             </figure>
                             <span class="g-pos-abs g-top-20 g-left-20">
                             <a class="btn btn-sm u-btn-red rounded-0" href="#">
@@ -1030,7 +1030,7 @@
                   </div>
 
                   <div class="media g-brd-around g-brd-gray-light-v4 rounded g-pa-30 g-mb-20">
-                    <img class="d-flex u-shadow-v25 g-width-80 g-height-80 rounded-circle g-mr-15" src="blog/assets/img-temp/100x100/img8.jpg" alt="SPurno Animation Studio">
+                    <img class="d-flex u-shadow-v25 g-width-80 g-height-80 rounded-circle g-mr-15" src="assets/img-temp/100x100/img8.jpg" alt="SPurno Animation Studio">
 
                     <div class="media-body">
                       <h4 class="g-color-gray-dark-v1 g-mb-15">
@@ -1153,7 +1153,7 @@
                 <!-- Article -->
                 <article class="media g-mb-30">
                   <a class="d-flex u-shadow-v25 mr-3" href="#">
-                    <img class="g-width-60 g-height-60" src="blog/assets/img-temp/100x100/img4.jpg" alt="SPurno">
+                    <img class="g-width-60 g-height-60" src="assets/img-temp/100x100/img4.jpg" alt="SPurno">
                   </a>
 
                   <div class="media-body">
@@ -1179,7 +1179,7 @@
                 <!-- Article -->
                 <article class="media g-mb-30">
                   <a class="d-flex u-shadow-v25 mr-3" href="#">
-                    <img class="g-width-60 g-height-60" src="blog/assets/img-temp/100x100/img5.jpg" alt="SPurno Animation Studio">
+                    <img class="g-width-60 g-height-60" src="assets/img-temp/100x100/img5.jpg" alt="SPurno Animation Studio">
                   </a>
 
                   <div class="media-body">
@@ -1205,7 +1205,7 @@
                 <!-- Article -->
                 <article class="media g-mb-30">
                   <a class="d-flex u-shadow-v25 mr-3" href="#">
-                    <img class="g-width-60 g-height-60" src="blog/assets/img-temp/100x100/img6.jpg" alt="SPurno Animation Studio">
+                    <img class="g-width-60 g-height-60" src="assets/img-temp/100x100/img6.jpg" alt="SPurno Animation Studio">
                   </a>
 
                   <div class="media-body">
@@ -1231,7 +1231,7 @@
                 <!-- Article -->
                 <article class="media">
                   <a class="d-flex u-shadow-v25 mr-3" href="#">
-                    <img class="g-width-60 g-height-60" src="blog/assets/img-temp/100x100/img7.jpg" alt="SPurno Animation Studio">
+                    <img class="g-width-60 g-height-60" src="assets/img-temp/100x100/img7.jpg" alt="SPurno Animation Studio">
                   </a>
 
                   <div class="media-body">
@@ -1681,35 +1681,35 @@
     <div class="u-outer-spaces-helper"></div>
 
     <!-- JS Global Compulsory -->
-    <script src="blog/assets/vendor/jquery/jquery.min.js"></script>
-    <script src="blog/assets/vendor/jquery-migrate/jquery-migrate.min.js"></script>
-    <script src="blog/assets/vendor/popper.min.js"></script>
-    <script src="blog/assets/vendor/bootstrap/bootstrap.min.js"></script>
+    <script src="assets/vendor/jquery/jquery.min.js"></script>
+    <script src="assets/vendor/jquery-migrate/jquery-migrate.min.js"></script>
+    <script src="assets/vendor/popper.min.js"></script>
+    <script src="assets/vendor/bootstrap/bootstrap.min.js"></script>
 
     <!-- JS Implementing Plugins -->
-    <script src="blog/assets/vendor/appear.js"></script>
-    <script src="blog/assets/vendor/dzsparallaxer/dzsparallaxer.js"></script>
-    <script src="blog/assets/vendor/dzsparallaxer/dzsscroller/scroller.js"></script>
-    <script src="blog/assets/vendor/dzsparallaxer/advancedscroller/plugin.js"></script>
-    <script src="blog/assets/vendor/hs-megamenu/src/hs.megamenu.js"></script>
-    <script src="blog/assets/vendor/slick-carousel/slick/slick.js"></script>
-    <script src="blog/assets/vendor/fancybox/jquery.fancybox.min.js"></script>
+    <script src="assets/vendor/appear.js"></script>
+    <script src="assets/vendor/dzsparallaxer/dzsparallaxer.js"></script>
+    <script src="assets/vendor/dzsparallaxer/dzsscroller/scroller.js"></script>
+    <script src="assets/vendor/dzsparallaxer/advancedscroller/plugin.js"></script>
+    <script src="assets/vendor/hs-megamenu/src/hs.megamenu.js"></script>
+    <script src="assets/vendor/slick-carousel/slick/slick.js"></script>
+    <script src="assets/vendor/fancybox/jquery.fancybox.min.js"></script>
 
     <!-- JS Unify -->
-    <script src="blog/assets/js/hs.core.js"></script>
-    <script src="blog/assets/js/components/hs.header.js"></script>
-    <script src="blog/assets/js/helpers/hs.hamburgers.js"></script>
-    <script src="blog/assets/js/components/hs.dropdown.js"></script>
-    <script src="blog/assets/js/components/hs.counter.js"></script>
-    <script src="blog/assets/js/components/hs.onscroll-animation.js"></script>
-    <script src="blog/assets/js/components/hs.sticky-block.js"></script>
-    <script src="blog/assets/js/components/hs.carousel.js"></script>
-    <script src="blog/assets/js/components/hs.popup.js"></script>
-    <script src="blog/assets/js/components/hs.go-to.js"></script>
+    <script src="assets/js/hs.core.js"></script>
+    <script src="assets/js/components/hs.header.js"></script>
+    <script src="assets/js/helpers/hs.hamburgers.js"></script>
+    <script src="assets/js/components/hs.dropdown.js"></script>
+    <script src="assets/js/components/hs.counter.js"></script>
+    <script src="assets/js/components/hs.onscroll-animation.js"></script>
+    <script src="assets/js/components/hs.sticky-block.js"></script>
+    <script src="assets/js/components/hs.carousel.js"></script>
+    <script src="assets/js/components/hs.popup.js"></script>
+    <script src="assets/js/components/hs.go-to.js"></script>
     <script src="https://apis.google.com/js/platform.js"></script>
 
     <!-- JS Customization -->
-    <script src="blog/assets/js/custom.js"></script>
+    <script src="assets/js/custom.js"></script>
 
     <!-- JS Plugins Init. -->
     <script>
