--- a/animated-wallpaper.html
+++ b/animated-wallpaper.html
@@ -24,7 +24,7 @@
     <meta name="twitter:domain" content="http://spurno.github.io" />
     <meta name="twitter:title" content="" />
     <meta name="twitter:description" content="Corporate Animation Artist" />
-    <meta name="twitter:image" content="http://spurno.github.io"/>
+     <meta name="twitter:image" content="http://spurno.github.io/images/bio.jpg"/>
     <script type="application/ld+json" src="application/Id+json.json"></script>
 
     <!-- Favicon -->
@@ -36,27 +36,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
 
     <!-- CSS Global Compulsory -->
-    <link rel="stylesheet" href="blog/assets/vendor/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/vendor/bootstrap/bootstrap.min.css">
     <script src="js/indexnowapi.js"></script>
 
     <!-- CSS Implementing Plugins -->
-    <link rel="stylesheet" href="blog/assets/vendor/icon-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="blog/assets/vendor/icon-line/css/simple-line-icons.css">
-    <link rel="stylesheet" href="blog/assets/vendor/icon-line-pro/style.css">
-    <link rel="stylesheet" href="blog/assets/vendor/icon-hs/style.css">
-    <link rel="stylesheet" href="blog/assets/vendor/dzsparallaxer/dzsparallaxer.css">
-    <link rel="stylesheet" href="blog/assets/vendor/dzsparallaxer/dzsscroller/scroller.css">
-    <link rel="stylesheet" href="blog/assets/vendor/dzsparallaxer/advancedscroller/plugin.css">
-    <link rel="stylesheet" href="blog/assets/vendor/animate.css">
-    <link rel="stylesheet" href="blog/assets/vendor/hs-megamenu/src/hs.megamenu.css">
-    <link rel="stylesheet" href="blog/assets/vendor/hamburgers/hamburgers.min.css">
-    <link rel="stylesheet" href="blog/assets/vendor/slick-carousel/slick/slick.css">
-    <link rel="stylesheet" href="blog/assets/vendor/fancybox/jquery.fancybox.css">
+    <link rel="stylesheet" href="assets/vendor/icon-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/vendor/icon-line/css/simple-line-icons.css">
+    <link rel="stylesheet" href="assets/vendor/icon-line-pro/style.css">
+    <link rel="stylesheet" href="assets/vendor/icon-hs/style.css">
+    <link rel="stylesheet" href="assets/vendor/dzsparallaxer/dzsparallaxer.css">
+    <link rel="stylesheet" href="assets/vendor/dzsparallaxer/dzsscroller/scroller.css">
+    <link rel="stylesheet" href="assets/vendor/dzsparallaxer/advancedscroller/plugin.css">
+    <link rel="stylesheet" href="assets/vendor/animate.css">
+    <link rel="stylesheet" href="assets/vendor/hs-megamenu/src/hs.megamenu.css">
+    <link rel="stylesheet" href="assets/vendor/hamburgers/hamburgers.min.css">
+    <link rel="stylesheet" href="assets/vendor/slick-carousel/slick/slick.css">
+    <link rel="stylesheet" href="assets/vendor/fancybox/jquery.fancybox.css">
 
     <link rel="stylesheet" href="assets/css/styles.bm-classic.css">
 
     <!-- CSS Customization -->
-    <link rel="stylesheet" href="blog/assets/css/custom.css">
+    <link rel="stylesheet" href="assets/css/custom.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5756742830355549" crossorigin="anonymous"></script>
     <script type="text/javascript">
         window.tdlcAsyncInit = function() {
@@ -471,7 +471,7 @@
                         <div class="col-lg-4 g-mb-30 g-mb-0--lg">
                           <article class="u-block-hover">
                             <figure class="g-bg-cover g-bg-black-gradient-opacity-v1--after">
-                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="blog/assets/img-temp/500x320/img1.jpg" alt="SPurno Animation Studio">
+                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="assets/img-temp/500x320/img1.jpg" alt="SPurno Animation Studio">
                             </figure>
                             <span class="g-pos-abs g-top-20 g-left-20">
                             <a class="btn btn-sm u-btn-red rounded-0" href="https://www.vecteezy.com/contributors?ref=3e6294ab-ad45-4d05-a6d1-69a50e4d26da&sub_id=default">
@@ -503,7 +503,7 @@
                         <div class="col-lg-4 g-mb-30 g-mb-0--lg">
                           <article class="u-block-hover">
                             <figure class="g-bg-cover g-bg-black-gradient-opacity-v1--after">
-                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="blog/assets/img-temp/500x320/img3.jpg" alt="SPurno Animation Studio">
+                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="assets/img-temp/500x320/img3.jpg" alt="SPurno Animation Studio">
                             </figure>
                             <span class="g-pos-abs g-top-20 g-left-20">
                             <a class="btn btn-sm u-btn-red rounded-0" href="https://www.shutterstock.com/en/g/SPurnoAnimation?rid=441825909">
@@ -535,7 +535,7 @@
                         <div class="col-lg-4 g-mb-30 g-mb-0--lg">
                           <article class="u-block-hover">
                             <figure class="g-bg-cover g-bg-black-gradient-opacity-v1--after">
-                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="blog/assets/img-temp/500x320/img2.jpg" alt="SPurno Animation Studio">
+                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="assets/img-temp/500x320/img2.jpg" alt="SPurno Animation Studio">
                             </figure>
                             <span class="g-pos-abs g-top-20 g-left-20">
                             <a class="btn btn-sm u-btn-red rounded-0" href="#">
@@ -817,7 +817,7 @@
 
                 <div class="g-font-size-16 g-line-height-1_8 g-mb-30">
                   <figure class="u-shadow-v25 g-mb-30">
-                    <img class="img-fluid w-100" src="blog/assets/img-temp/900x600/img1.jpg" alt="SPurno Animation Studio">
+                    <img class="img-fluid w-100" src="assets/img-temp/900x600/img1.jpg" alt="SPurno Animation Studio">
                   </figure>
 
                   <p>Aliquam ante ipsum, maximus in orci ut, blandit aliquam ipsum. Phasellus sed tortor non magna lobortis faucibus. Mauris pharetra convallis urna, eu porttitor velit pretium eget. Vestibulum vehicula quis felis eget imperdiet. Sed vulputate tincidunt facilisis. Morbi eu suscipit dolor. Quisque nec turpis quis ante gravida placerat non at turpis. Phasellus tincidunt nisi eget posuere porta.</p>
@@ -831,7 +831,7 @@
                   <p>Cras sit amet mi eros. Pellentesque auctor, massa at laoreet lobortis, mi lorem commodo enim, non mollis arcu erat ac augue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris maximus enim in mauris ornare bibendum. Cras bibendum, nibh non interdum lacinia, sem augue convallis nibh, sit amet eleifend lacus felis quis turpis. Suspendisse potenti.</p>
 
                   <figure class="text-center text-md-left float-md-left g-pr-30--sm g-py-20 mb-0">
-                    <img class="u-shadow-v25 img-fluid g-width-300" src="blog/assets/img-temp/500x650/img1.jpg" alt="SPurno Animation Studio">
+                    <img class="u-shadow-v25 img-fluid g-width-300" src="assets/img-temp/500x650/img1.jpg" alt="SPurno Animation Studio">
                     <figcaption class="figure-caption g-font-size-12 g-color-gray-dark-v4 g-mt-5">
                       <em>A caption for the above image.</em>
                     </figcaption>
@@ -857,7 +857,7 @@
                   <p>Adipiscing elit, in risus neque, semper sed congue eget, ultricies et tortor. Duis lorem libero, dapibus lacinia tellus id, pulvinar rutrum diam. Cras tempor lectus quis erat facilisis, a commodo mi volutpat. Sed vitae libero libero. Vestibulum non leo lobortis, placerat est a, laoreet mauris. Aenean vitae erat interdum, dignissim tellus quis, pellentesque libero. Nullam feugiat magna non justo sodales mattis. Phasellus mattis velit justo, non hendrerit felis tincidunt vitae. In at mi finibus, finibus sem dictum, convallis libero. In condimentum euismod nunc id dapibus. Praesent sagittis posuere felis et viverra. Mauris eros dui, malesuada nec risus nec, placerat porta sem. Suspendisse id quam in ante lobortis fringilla. Aenean euismod ante eget  auctor fringilla. Morbi consequat ut felis a scelerisque. Aliquam purus sem, rutrum sit amet ligula a, tristique porttitor mauris.</p>
 
                   <figure class="text-center g-my-40">
-                    <img class="u-shadow-v25 img-fluid" src="blog/assets/img-temp/430x270/img1.jpg" alt="SPurno Animation Studio">
+                    <img class="u-shadow-v25 img-fluid" src="assets/img-temp/430x270/img1.jpg" alt="SPurno Animation Studio">
                     <figcaption class="figure-caption g-font-size-12 g-color-gray-dark-v4 g-mt-5">
                       <em>A caption for the above image.</em>
                     </figcaption>
@@ -1010,7 +1010,7 @@
                   </div>
 
                   <div class="media g-brd-around g-brd-gray-light-v4 rounded g-pa-30 g-mb-20">
-                    <img class="d-flex u-shadow-v25 g-width-80 g-height-80 rounded-circle g-mr-15" src="blog/assets/img-temp/100x100/img8.jpg" alt="SPurno Animation Studio">
+                    <img class="d-flex u-shadow-v25 g-width-80 g-height-80 rounded-circle g-mr-15" src="assets/img-temp/100x100/img8.jpg" alt="SPurno Animation Studio">
 
                     <div class="media-body">
                       <h4 class="g-color-gray-dark-v1 g-mb-15">
@@ -1133,7 +1133,7 @@
                 <!-- Article -->
                 <article class="media g-mb-30">
                   <a class="d-flex u-shadow-v25 mr-3" href="#">
-                    <img class="g-width-60 g-height-60" src="blog/assets/img-temp/100x100/img4.jpg" alt="SPurno">
+                    <img class="g-width-60 g-height-60" src="assets/img-temp/100x100/img4.jpg" alt="SPurno">
                   </a>
 
                   <div class="media-body">
@@ -1159,7 +1159,7 @@
                 <!-- Article -->
                 <article class="media g-mb-30">
                   <a class="d-flex u-shadow-v25 mr-3" href="#">
-                    <img class="g-width-60 g-height-60" src="blog/assets/img-temp/100x100/img5.jpg" alt="SPurno Animation Studio">
+                    <img class="g-width-60 g-height-60" src="assets/img-temp/100x100/img5.jpg" alt="SPurno Animation Studio">
                   </a>
 
                   <div class="media-body">
@@ -1185,7 +1185,7 @@
                 <!-- Article -->
                 <article class="media g-mb-30">
                   <a class="d-flex u-shadow-v25 mr-3" href="#">
-                    <img class="g-width-60 g-height-60" src="blog/assets/img-temp/100x100/img6.jpg" alt="SPurno Animation Studio">
+                    <img class="g-width-60 g-height-60" src="assets/img-temp/100x100/img6.jpg" alt="SPurno Animation Studio">
                   </a>
 
                   <div class="media-body">
@@ -1211,7 +1211,7 @@
                 <!-- Article -->
                 <article class="media">
                   <a class="d-flex u-shadow-v25 mr-3" href="#">
-                    <img class="g-width-60 g-height-60" src="blog/assets/img-temp/100x100/img7.jpg" alt="SPurno Animation Studio">
+                    <img class="g-width-60 g-height-60" src="assets/img-temp/100x100/img7.jpg" alt="SPurno Animation Studio">
                   </a>
 
                   <div class="media-body">
@@ -1660,35 +1660,35 @@
     <div class="u-outer-spaces-helper"></div>
 
     <!-- JS Global Compulsory -->
-    <script src="blog/assets/vendor/jquery/jquery.min.js"></script>
-    <script src="blog/assets/vendor/jquery-migrate/jquery-migrate.min.js"></script>
-    <script src="blog/assets/vendor/popper.min.js"></script>
-    <script src="blog/assets/vendor/bootstrap/bootstrap.min.js"></script>
+    <script src="assets/vendor/jquery/jquery.min.js"></script>
+    <script src="assets/vendor/jquery-migrate/jquery-migrate.min.js"></script>
+    <script src="assets/vendor/popper.min.js"></script>
+    <script src="assets/vendor/bootstrap/bootstrap.min.js"></script>
 
     <!-- JS Implementing Plugins -->
-    <script src="blog/assets/vendor/appear.js"></script>
-    <script src="blog/assets/vendor/dzsparallaxer/dzsparallaxer.js"></script>
-    <script src="blog/assets/vendor/dzsparallaxer/dzsscroller/scroller.js"></script>
-    <script src="blog/assets/vendor/dzsparallaxer/advancedscroller/plugin.js"></script>
-    <script src="blog/assets/vendor/hs-megamenu/src/hs.megamenu.js"></script>
-    <script src="blog/assets/vendor/slick-carousel/slick/slick.js"></script>
-    <script src="blog/assets/vendor/fancybox/jquery.fancybox.min.js"></script>
+    <script src="assets/vendor/appear.js"></script>
+    <script src="assets/vendor/dzsparallaxer/dzsparallaxer.js"></script>
+    <script src="assets/vendor/dzsparallaxer/dzsscroller/scroller.js"></script>
+    <script src="assets/vendor/dzsparallaxer/advancedscroller/plugin.js"></script>
+    <script src="assets/vendor/hs-megamenu/src/hs.megamenu.js"></script>
+    <script src="assets/vendor/slick-carousel/slick/slick.js"></script>
+    <script src="assets/vendor/fancybox/jquery.fancybox.min.js"></script>
 
     <!-- JS Unify -->
-    <script src="blog/assets/js/hs.core.js"></script>
-    <script src="blog/assets/js/components/hs.header.js"></script>
-    <script src="blog/assets/js/helpers/hs.hamburgers.js"></script>
-    <script src="blog/assets/js/components/hs.dropdown.js"></script>
-    <script src="blog/assets/js/components/hs.counter.js"></script>
-    <script src="blog/assets/js/components/hs.onscroll-animation.js"></script>
-    <script src="blog/assets/js/components/hs.sticky-block.js"></script>
-    <script src="blog/assets/js/components/hs.carousel.js"></script>
-    <script src="blog/assets/js/components/hs.popup.js"></script>
-    <script src="blog/assets/js/components/hs.go-to.js"></script>
+    <script src="assets/js/hs.core.js"></script>
+    <script src="assets/js/components/hs.header.js"></script>
+    <script src="assets/js/helpers/hs.hamburgers.js"></script>
+    <script src="assets/js/components/hs.dropdown.js"></script>
+    <script src="assets/js/components/hs.counter.js"></script>
+    <script src="assets/js/components/hs.onscroll-animation.js"></script>
+    <script src="assets/js/components/hs.sticky-block.js"></script>
+    <script src="assets/js/components/hs.carousel.js"></script>
+    <script src="assets/js/components/hs.popup.js"></script>
+    <script src="assets/js/components/hs.go-to.js"></script>
     <script src="https://apis.google.com/js/platform.js"></script>
 
     <!-- JS Customization -->
-    <script src="blog/assets/js/custom.js"></script>
+    <script src="assets/js/custom.js"></script>
 
     <!-- JS Plugins Init. -->
     <script>
