--- a/contact-us.html
+++ b/contact-us.html
@@ -24,7 +24,7 @@
     <meta name="twitter:domain" content="http://spurno.github.io" />
     <meta name="twitter:title" content="" />
     <meta name="twitter:description" content="Corporate Animation Artist" />
-    <meta name="twitter:image" content="http://spurno.github.io"/>
+     <meta name="twitter:image" content="http://spurno.github.io/images/bio.jpg"/>
     <script type="application/ld+json" src="application/Id+json.json"></script>
     <script type="application/ld+json" src="application/Id+json.json"></script>
 
@@ -37,27 +37,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
 
     <!-- CSS Global Compulsory -->
-    <link rel="stylesheet" href="blog/assets/vendor/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/vendor/bootstrap/bootstrap.min.css">
     <script src="js/indexnowapi.js"></script>
 
     <!-- CSS Implementing Plugins -->
-    <link rel="stylesheet" href="blog/assets/vendor/icon-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="blog/assets/vendor/icon-line/css/simple-line-icons.css">
-    <link rel="stylesheet" href="blog/assets/vendor/icon-line-pro/style.css">
-    <link rel="stylesheet" href="blog/assets/vendor/icon-hs/style.css">
-    <link rel="stylesheet" href="blog/assets/vendor/dzsparallaxer/dzsparallaxer.css">
-    <link rel="stylesheet" href="blog/assets/vendor/dzsparallaxer/dzsscroller/scroller.css">
-    <link rel="stylesheet" href="blog/assets/vendor/dzsparallaxer/advancedscroller/plugin.css">
-    <link rel="stylesheet" href="blog/assets/vendor/animate.css">
-    <link rel="stylesheet" href="blog/assets/vendor/hs-megamenu/src/hs.megamenu.css">
-    <link rel="stylesheet" href="blog/assets/vendor/hamburgers/hamburgers.min.css">
-    <link rel="stylesheet" href="blog/assets/vendor/slick-carousel/slick/slick.css">
-    <link rel="stylesheet" href="blog/assets/vendor/fancybox/jquery.fancybox.css">
+    <link rel="stylesheet" href="assets/vendor/icon-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/vendor/icon-line/css/simple-line-icons.css">
+    <link rel="stylesheet" href="assets/vendor/icon-line-pro/style.css">
+    <link rel="stylesheet" href="assets/vendor/icon-hs/style.css">
+    <link rel="stylesheet" href="assets/vendor/dzsparallaxer/dzsparallaxer.css">
+    <link rel="stylesheet" href="assets/vendor/dzsparallaxer/dzsscroller/scroller.css">
+    <link rel="stylesheet" href="assets/vendor/dzsparallaxer/advancedscroller/plugin.css">
+    <link rel="stylesheet" href="assets/vendor/animate.css">
+    <link rel="stylesheet" href="assets/vendor/hs-megamenu/src/hs.megamenu.css">
+    <link rel="stylesheet" href="assets/vendor/hamburgers/hamburgers.min.css">
+    <link rel="stylesheet" href="assets/vendor/slick-carousel/slick/slick.css">
+    <link rel="stylesheet" href="assets/vendor/fancybox/jquery.fancybox.css">
 
     <link rel="stylesheet" href="assets/css/styles.bm-classic.css">
 
     <!-- CSS Customization -->
-    <link rel="stylesheet" href="blog/assets/css/custom.css">
+    <link rel="stylesheet" href="assets/css/custom.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5756742830355549" crossorigin="anonymous"></script>
     <script type="text/javascript">
         window.tdlcAsyncInit = function() {
@@ -474,7 +474,7 @@
                         <div class="col-lg-4 g-mb-30 g-mb-0--lg">
                           <article class="u-block-hover">
                             <figure class="g-bg-cover g-bg-black-gradient-opacity-v1--after">
-                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="blog/assets/img-temp/500x320/img1.jpg" alt="SPurno Animation Studio">
+                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="assets/img-temp/500x320/img1.jpg" alt="SPurno Animation Studio">
                             </figure>
                             <span class="g-pos-abs g-top-20 g-left-20">
                             <a class="btn btn-sm u-btn-red rounded-0" href="https://www.vecteezy.com/contributors?ref=3e6294ab-ad45-4d05-a6d1-69a50e4d26da&sub_id=default">
@@ -506,7 +506,7 @@
                         <div class="col-lg-4 g-mb-30 g-mb-0--lg">
                           <article class="u-block-hover">
                             <figure class="g-bg-cover g-bg-black-gradient-opacity-v1--after">
-                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="blog/assets/img-temp/500x320/img3.jpg" alt="SPurno Animation Studio">
+                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="assets/img-temp/500x320/img3.jpg" alt="SPurno Animation Studio">
                             </figure>
                             <span class="g-pos-abs g-top-20 g-left-20">
                             <a class="btn btn-sm u-btn-red rounded-0" href="https://www.shutterstock.com/en/g/SPurnoAnimation?rid=441825909">
@@ -538,7 +538,7 @@
                         <div class="col-lg-4 g-mb-30 g-mb-0--lg">
                           <article class="u-block-hover">
                             <figure class="g-bg-cover g-bg-black-gradient-opacity-v1--after">
-                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="blog/assets/img-temp/500x320/img2.jpg" alt="SPurno Animation Studio">
+                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="assets/img-temp/500x320/img2.jpg" alt="SPurno Animation Studio">
                             </figure>
                             <span class="g-pos-abs g-top-20 g-left-20">
                             <a class="btn btn-sm u-btn-red rounded-0" href="#">
@@ -816,36 +816,36 @@
     <div class="u-outer-spaces-helper"></div>
 
     <!-- JS Global Compulsory -->
-    <script src="blog/assets/vendor/jquery/jquery.min.js"></script>
-    <script src="blog/assets/vendor/jquery-migrate/jquery-migrate.min.js"></script>
-    <script src="blog/assets/vendor/popper.min.js"></script>
-    <script src="blog/assets/vendor/bootstrap/bootstrap.min.js"></script>
+    <script src="assets/vendor/jquery/jquery.min.js"></script>
+    <script src="assets/vendor/jquery-migrate/jquery-migrate.min.js"></script>
+    <script src="assets/vendor/popper.min.js"></script>
+    <script src="assets/vendor/bootstrap/bootstrap.min.js"></script>
 
     <!-- JS Implementing Plugins -->
-    <script src="blog/assets/vendor/appear.js"></script>
-    <script src="blog/assets/vendor/dzsparallaxer/dzsparallaxer.js"></script>
-    <script src="blog/assets/vendor/dzsparallaxer/dzsscroller/scroller.js"></script>
-    <script src="blog/assets/vendor/dzsparallaxer/advancedscroller/plugin.js"></script>
-    <script src="blog/assets/vendor/hs-megamenu/src/hs.megamenu.js"></script>
-    <script src="blog/assets/vendor/slick-carousel/slick/slick.js"></script>
-    <script src="blog/assets/vendor/fancybox/jquery.fancybox.min.js"></script>
-    <script src="blog/assets/vendor/gmaps/gmaps.min.js"></script>
+    <script src="assets/vendor/appear.js"></script>
+    <script src="assets/vendor/dzsparallaxer/dzsparallaxer.js"></script>
+    <script src="assets/vendor/dzsparallaxer/dzsscroller/scroller.js"></script>
+    <script src="assets/vendor/dzsparallaxer/advancedscroller/plugin.js"></script>
+    <script src="assets/vendor/hs-megamenu/src/hs.megamenu.js"></script>
+    <script src="assets/vendor/slick-carousel/slick/slick.js"></script>
+    <script src="assets/vendor/fancybox/jquery.fancybox.min.js"></script>
+    <script src="assets/vendor/gmaps/gmaps.min.js"></script>
 
     <!-- JS Unify -->
-    <script src="blog/assets/js/hs.core.js"></script>
-    <script src="blog/assets/js/components/hs.header.js"></script>
-    <script src="blog/assets/js/helpers/hs.hamburgers.js"></script>
-    <script src="blog/assets/js/components/hs.dropdown.js"></script>
-    <script src="blog/assets/js/components/hs.counter.js"></script>
-    <script src="blog/assets/js/components/hs.onscroll-animation.js"></script>
-    <script src="blog/assets/js/components/hs.sticky-block.js"></script>
-    <script src="blog/assets/js/components/hs.carousel.js"></script>
-    <script src="blog/assets/js/components/hs.popup.js"></script>
-    <script src="blog/assets/js/components/hs.go-to.js"></script>
+    <script src="assets/js/hs.core.js"></script>
+    <script src="assets/js/components/hs.header.js"></script>
+    <script src="assets/js/helpers/hs.hamburgers.js"></script>
+    <script src="assets/js/components/hs.dropdown.js"></script>
+    <script src="assets/js/components/hs.counter.js"></script>
+    <script src="assets/js/components/hs.onscroll-animation.js"></script>
+    <script src="assets/js/components/hs.sticky-block.js"></script>
+    <script src="assets/js/components/hs.carousel.js"></script>
+    <script src="assets/js/components/hs.popup.js"></script>
+    <script src="assets/js/components/hs.go-to.js"></script>
     <script src="https://apis.google.com/js/platform.js"></script>
 
     <!-- JS Customization -->
-    <script src="blog/assets/js/custom.js"></script>
+    <script src="assets/js/custom.js"></script>
 
     <!-- JS Plugins Init. -->
     <script>
