--- a/motion-graphics.html
+++ b/motion-graphics.html
@@ -24,7 +24,7 @@
     <meta name="twitter:domain" content="http://spurno.github.io" />
     <meta name="twitter:title" content="" />
     <meta name="twitter:description" content="Corporate Animation Artist" />
-    <meta name="twitter:image" content="http://spurno.github.io"/>
+     <meta name="twitter:image" content="http://spurno.github.io/images/bio.jpg"/>
     <script type="application/ld+json" src="application/Id+json.json"></script>
 
     <!-- Favicon -->
@@ -36,28 +36,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
 
     <!-- CSS Global Compulsory -->
-    <link rel="stylesheet" href="blog/assets/vendor/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/vendor/bootstrap/bootstrap.min.css">
     <script src="js/indexnowapi.js"></script>
 
     <!-- CSS Implementing Plugins -->
-    <link rel="stylesheet" href="blog/assets/vendor/icon-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="blog/assets/vendor/icon-line/css/simple-line-icons.css">
-    <link rel="stylesheet" href="blog/assets/vendor/icon-line-pro/style.css">
-    <link rel="stylesheet" href="blog/assets/vendor/icon-hs/style.css">
-    <link rel="stylesheet" href="blog/assets/vendor/dzsparallaxer/dzsparallaxer.css">
-    <link rel="stylesheet" href="blog/assets/vendor/dzsparallaxer/dzsscroller/scroller.css">
-    <link rel="stylesheet" href="blog/assets/vendor/dzsparallaxer/advancedscroller/plugin.css">
-    <link rel="stylesheet" href="blog/assets/vendor/animate.css">
-    <link rel="stylesheet" href="blog/assets/vendor/hs-megamenu/src/hs.megamenu.css">
-    <link rel="stylesheet" href="blog/assets/vendor/hamburgers/hamburgers.min.css">
-    <link rel="stylesheet" href="blog/assets/vendor/slick-carousel/slick/slick.css">
-    <link rel="stylesheet" href="blog/assets/vendor/fancybox/jquery.fancybox.css">
+    <link rel="stylesheet" href="assets/vendor/icon-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/vendor/icon-line/css/simple-line-icons.css">
+    <link rel="stylesheet" href="assets/vendor/icon-line-pro/style.css">
+    <link rel="stylesheet" href="assets/vendor/icon-hs/style.css">
+    <link rel="stylesheet" href="assets/vendor/dzsparallaxer/dzsparallaxer.css">
+    <link rel="stylesheet" href="assets/vendor/dzsparallaxer/dzsscroller/scroller.css">
+    <link rel="stylesheet" href="assets/vendor/dzsparallaxer/advancedscroller/plugin.css">
+    <link rel="stylesheet" href="assets/vendor/animate.css">
+    <link rel="stylesheet" href="assets/vendor/hs-megamenu/src/hs.megamenu.css">
+    <link rel="stylesheet" href="assets/vendor/hamburgers/hamburgers.min.css">
+    <link rel="stylesheet" href="assets/vendor/slick-carousel/slick/slick.css">
+    <link rel="stylesheet" href="assets/vendor/fancybox/jquery.fancybox.css">
 
     <link rel="stylesheet" href="assets/css/styles.bm-classic.css">
     <link rel="stylesheet" href="assets2/css/spurno.css">
 
     <!-- CSS Customization -->
-    <link rel="stylesheet" href="blog/assets/css/custom.css">
+    <link rel="stylesheet" href="assets/css/custom.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5756742830355549" crossorigin="anonymous"></script>
     <script type="text/javascript">
         window.tdlcAsyncInit = function() {
@@ -474,7 +474,7 @@
                         <div class="col-lg-4 g-mb-30 g-mb-0--lg">
                           <article class="u-block-hover">
                             <figure class="g-bg-cover g-bg-black-gradient-opacity-v1--after">
-                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="blog/assets/img-temp/500x320/img1.jpg" alt="SPurno Animation Studio">
+                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="assets/img-temp/500x320/img1.jpg" alt="SPurno Animation Studio">
                             </figure>
                             <span class="g-pos-abs g-top-20 g-left-20">
                             <a class="btn btn-sm u-btn-red rounded-0" href="https://www.vecteezy.com/contributors?ref=3e6294ab-ad45-4d05-a6d1-69a50e4d26da&sub_id=default">
@@ -506,7 +506,7 @@
                         <div class="col-lg-4 g-mb-30 g-mb-0--lg">
                           <article class="u-block-hover">
                             <figure class="g-bg-cover g-bg-black-gradient-opacity-v1--after">
-                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="blog/assets/img-temp/500x320/img3.jpg" alt="SPurno Animation Studio">
+                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="assets/img-temp/500x320/img3.jpg" alt="SPurno Animation Studio">
                             </figure>
                             <span class="g-pos-abs g-top-20 g-left-20">
                             <a class="btn btn-sm u-btn-red rounded-0" href="https://www.shutterstock.com/en/g/SPurnoAnimation?rid=441825909">
@@ -538,7 +538,7 @@
                         <div class="col-lg-4 g-mb-30 g-mb-0--lg">
                           <article class="u-block-hover">
                             <figure class="g-bg-cover g-bg-black-gradient-opacity-v1--after">
-                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="blog/assets/img-temp/500x320/img2.jpg" alt="SPurno Animation Studio">
+                              <img class="img-fluid w-100 u-block-hover__main--zoom-v1" src="assets/img-temp/500x320/img2.jpg" alt="SPurno Animation Studio">
                             </figure>
                             <span class="g-pos-abs g-top-20 g-left-20">
                             <a class="btn btn-sm u-btn-red rounded-0" href="#">
@@ -985,7 +985,7 @@
                     <div class="col-lg-4 col-sm-6 g-mb-30">
                       <article>
                         <figure class="u-shadow-v25 g-pos-rel g-mb-20">
-                          <img class="img-fluid w-100" src="blog/assets/img-temp/400x270/img2.jpg" alt="Animated Background Stock Video">
+                          <img class="img-fluid w-100" src="assets/img-temp/400x270/img2.jpg" alt="Animated Background Stock Video">
 
                           <figcaption class="g-pos-abs g-top-10 g-left-10">
                             <a class="btn btn-xs u-btn-blue text-uppercase rounded-0" href="#">Line Background</a>
@@ -1003,7 +1003,7 @@
                     <div class="col-lg-4 col-sm-6 g-mb-30">
                       <article>
                         <figure class="u-shadow-v25 g-pos-rel g-mb-20">
-                          <img class="img-fluid w-100" src="blog/assets/img-temp/400x270/img3.jpg" alt="SPurno Animation Studio">
+                          <img class="img-fluid w-100" src="assets/img-temp/400x270/img3.jpg" alt="SPurno Animation Studio">
 
                           <figcaption class="g-pos-abs g-top-10 g-left-10">
                             <a class="btn btn-xs u-btn-pink text-uppercase rounded-0" href="#">Motion Background</a>
@@ -1021,7 +1021,7 @@
                     <div class="col-lg-4 col-sm-6 g-mb-30">
                       <article>
                         <figure class="u-shadow-v25 g-pos-rel g-mb-20">
-                          <img class="img-fluid w-100" src="blog/assets/img-temp/400x270/img8.jpg" alt="SPurno Animation Studio">
+                          <img class="img-fluid w-100" src="assets/img-temp/400x270/img8.jpg" alt="SPurno Animation Studio">
 
                           <figcaption class="g-pos-abs g-top-10 g-left-10">
                             <a class="btn btn-xs u-btn-teal text-uppercase rounded-0" href="#">Shopping Animation</a>
@@ -1039,7 +1039,7 @@
                     <div class="col-lg-4 col-sm-6 g-mb-30 g-mb-0--sm">
                       <article>
                         <figure class="u-shadow-v25 g-pos-rel g-mb-20">
-                          <img class="img-fluid w-100" src="blog/assets/img-temp/400x270/img15.jpg" alt="SPurno Animation Studio">
+                          <img class="img-fluid w-100" src="assets/img-temp/400x270/img15.jpg" alt="SPurno Animation Studio">
 
                           <figcaption class="g-pos-abs g-top-10 g-left-10">
                             <a class="btn btn-xs u-btn-darkred text-uppercase rounded-0" href="#">Presentation Slides</a>
@@ -1057,7 +1057,7 @@
                     <div class="col-lg-4 col-sm-6 g-mb-30 g-mb-0--sm">
                       <article>
                         <figure class="u-shadow-v25 g-pos-rel g-mb-20">
-                          <img class="img-fluid w-100" src="blog/assets/img-temp/400x270/img12.jpg" alt="SPurno Animation Studio">
+                          <img class="img-fluid w-100" src="assets/img-temp/400x270/img12.jpg" alt="SPurno Animation Studio">
 
                           <figcaption class="g-pos-abs g-top-10 g-left-10">
                             <a class="btn btn-xs u-btn-indigo text-uppercase rounded-0" href="#">Finance</a>
@@ -1075,7 +1075,7 @@
                     <div class="col-lg-4 col-sm-6">
                       <article>
                         <figure class="u-shadow-v25 g-pos-rel g-mb-20">
-                          <img class="img-fluid w-100" src="blog/assets/img-temp/400x270/img13.jpg" alt="SPurno Animation Studio">
+                          <img class="img-fluid w-100" src="assets/img-temp/400x270/img13.jpg" alt="SPurno Animation Studio">
 
                           <figcaption class="g-pos-abs g-top-10 g-left-10">
                             <a class="btn btn-xs u-btn-brown text-uppercase rounded-0" href="#">Shapes</a>
@@ -1098,7 +1098,7 @@
                   </div>
 
                   <div class="media g-brd-around g-brd-gray-light-v4 rounded g-pa-30 g-mb-20">
-                    <img class="d-flex u-shadow-v25 g-width-80 g-height-80 rounded-circle g-mr-15" src="blog/assets/img-temp/100x100/img8.jpg" alt="SPurno Animation Studio">
+                    <img class="d-flex u-shadow-v25 g-width-80 g-height-80 rounded-circle g-mr-15" src="assets/img-temp/100x100/img8.jpg" alt="SPurno Animation Studio">
 
                     <div class="media-body">
                       <h4 class="g-color-gray-dark-v1 g-mb-15">
@@ -1221,7 +1221,7 @@
                 <!-- Article -->
                 <article class="media g-mb-30">
                   <a class="d-flex u-shadow-v25 mr-3" href="#">
-                    <img class="g-width-60 g-height-60" src="blog/assets/img-temp/100x100/img4.jpg" alt="SPurno">
+                    <img class="g-width-60 g-height-60" src="assets/img-temp/100x100/img4.jpg" alt="SPurno">
                   </a>
 
                   <div class="media-body">
@@ -1247,7 +1247,7 @@
                 <!-- Article -->
                 <article class="media g-mb-30">
                   <a class="d-flex u-shadow-v25 mr-3" href="#">
-                    <img class="g-width-60 g-height-60" src="blog/assets/img-temp/100x100/img5.jpg" alt="SPurno Animation Studio">
+                    <img class="g-width-60 g-height-60" src="assets/img-temp/100x100/img5.jpg" alt="SPurno Animation Studio">
                   </a>
 
                   <div class="media-body">
@@ -1273,7 +1273,7 @@
                 <!-- Article -->
                 <article class="media g-mb-30">
                   <a class="d-flex u-shadow-v25 mr-3" href="#">
-                    <img class="g-width-60 g-height-60" src="blog/assets/img-temp/100x100/img6.jpg" alt="SPurno Animation Studio">
+                    <img class="g-width-60 g-height-60" src="assets/img-temp/100x100/img6.jpg" alt="SPurno Animation Studio">
                   </a>
 
                   <div class="media-body">
@@ -1299,7 +1299,7 @@
                 <!-- Article -->
                 <article class="media">
                   <a class="d-flex u-shadow-v25 mr-3" href="#">
-                    <img class="g-width-60 g-height-60" src="blog/assets/img-temp/100x100/img7.jpg" alt="SPurno Animation Studio">
+                    <img class="g-width-60 g-height-60" src="assets/img-temp/100x100/img7.jpg" alt="SPurno Animation Studio">
                   </a>
 
                   <div class="media-body">
@@ -1748,35 +1748,35 @@
     <div class="u-outer-spaces-helper"></div>
 
     <!-- JS Global Compulsory -->
-    <script src="blog/assets/vendor/jquery/jquery.min.js"></script>
-    <script src="blog/assets/vendor/jquery-migrate/jquery-migrate.min.js"></script>
-    <script src="blog/assets/vendor/popper.min.js"></script>
-    <script src="blog/assets/vendor/bootstrap/bootstrap.min.js"></script>
+    <script src="assets/vendor/jquery/jquery.min.js"></script>
+    <script src="assets/vendor/jquery-migrate/jquery-migrate.min.js"></script>
+    <script src="assets/vendor/popper.min.js"></script>
+    <script src="assets/vendor/bootstrap/bootstrap.min.js"></script>
 
     <!-- JS Implementing Plugins -->
-    <script src="blog/assets/vendor/appear.js"></script>
-    <script src="blog/assets/vendor/dzsparallaxer/dzsparallaxer.js"></script>
-    <script src="blog/assets/vendor/dzsparallaxer/dzsscroller/scroller.js"></script>
-    <script src="blog/assets/vendor/dzsparallaxer/advancedscroller/plugin.js"></script>
-    <script src="blog/assets/vendor/hs-megamenu/src/hs.megamenu.js"></script>
-    <script src="blog/assets/vendor/slick-carousel/slick/slick.js"></script>
-    <script src="blog/assets/vendor/fancybox/jquery.fancybox.min.js"></script>
+    <script src="assets/vendor/appear.js"></script>
+    <script src="assets/vendor/dzsparallaxer/dzsparallaxer.js"></script>
+    <script src="assets/vendor/dzsparallaxer/dzsscroller/scroller.js"></script>
+    <script src="assets/vendor/dzsparallaxer/advancedscroller/plugin.js"></script>
+    <script src="assets/vendor/hs-megamenu/src/hs.megamenu.js"></script>
+    <script src="assets/vendor/slick-carousel/slick/slick.js"></script>
+    <script src="assets/vendor/fancybox/jquery.fancybox.min.js"></script>
 
     <!-- JS Unify -->
-    <script src="blog/assets/js/hs.core.js"></script>
-    <script src="blog/assets/js/components/hs.header.js"></script>
-    <script src="blog/assets/js/helpers/hs.hamburgers.js"></script>
-    <script src="blog/assets/js/components/hs.dropdown.js"></script>
-    <script src="blog/assets/js/components/hs.counter.js"></script>
-    <script src="blog/assets/js/components/hs.onscroll-animation.js"></script>
-    <script src="blog/assets/js/components/hs.sticky-block.js"></script>
-    <script src="blog/assets/js/components/hs.carousel.js"></script>
-    <script src="blog/assets/js/components/hs.popup.js"></script>
-    <script src="blog/assets/js/components/hs.go-to.js"></script>
+    <script src="assets/js/hs.core.js"></script>
+    <script src="assets/js/components/hs.header.js"></script>
+    <script src="assets/js/helpers/hs.hamburgers.js"></script>
+    <script src="assets/js/components/hs.dropdown.js"></script>
+    <script src="assets/js/components/hs.counter.js"></script>
+    <script src="assets/js/components/hs.onscroll-animation.js"></script>
+    <script src="assets/js/components/hs.sticky-block.js"></script>
+    <script src="assets/js/components/hs.carousel.js"></script>
+    <script src="assets/js/components/hs.popup.js"></script>
+    <script src="assets/js/components/hs.go-to.js"></script>
     <script src="https://apis.google.com/js/platform.js"></script>
 
     <!-- JS Customization -->
-    <script src="blog/assets/js/custom.js"></script>
+    <script src="assets/js/custom.js"></script>
 
     <!-- JS Plugins Init. -->
     <script>
